test/lit/pto/tgemv_mx_verify_invalid_shape_a5.pto
// RUN: not ptoas --pto-arch=a5 %s 2>&1 | FileCheck %s

module attributes {pto.target_arch = "a5"} {
  func.func @tgemv_mx_invalid_static_shape(%a : !pto.tile_buf<loc=left, dtype=f8E4M3FN, rows=1, cols=128, v_row=1, v_col=128, blayout=col_major, slayout=row_major, fractal=512, pad=0>,
                                           %b : !pto.tile_buf<loc=right, dtype=f8E4M3FN, rows=64, cols=32, v_row=64, v_col=32, blayout=row_major, slayout=col_major, fractal=512, pad=0>) attributes {pto.kernel_kind = #pto.kernel_kind<cube>} {
    %a_scale = pto.alloc_tile : !pto.tile_buf<loc=scaling, dtype=f16, rows=1, cols=128, v_row=1, v_col=128, blayout=row_major, slayout=row_major, fractal=512, pad=0>
    %b_scale = pto.alloc_tile : !pto.tile_buf<loc=scaling, dtype=f16, rows=64, cols=32, v_row=64, v_col=32, blayout=row_major, slayout=row_major, fractal=512, pad=0>
    %dst = pto.alloc_tile : !pto.tile_buf<loc=acc, dtype=f32, rows=1, cols=32, v_row=1, v_col=32, blayout=col_major, slayout=row_major, fractal=1024, pad=0>

    pto.tgemv.mx ins(%a, %a_scale, %b, %b_scale : !pto.tile_buf<loc=left, dtype=f8E4M3FN, rows=1, cols=128, v_row=1, v_col=128, blayout=col_major, slayout=row_major, fractal=512, pad=0>, !pto.tile_buf<loc=scaling, dtype=f16, rows=1, cols=128, v_row=1, v_col=128, blayout=row_major, slayout=row_major, fractal=512, pad=0>, !pto.tile_buf<loc=right, dtype=f8E4M3FN, rows=64, cols=32, v_row=64, v_col=32, blayout=row_major, slayout=col_major, fractal=512, pad=0>, !pto.tile_buf<loc=scaling, dtype=f16, rows=64, cols=32, v_row=64, v_col=32, blayout=row_major, slayout=row_major, fractal=512, pad=0>) outs(%dst : !pto.tile_buf<loc=acc, dtype=f32, rows=1, cols=32, v_row=1, v_col=32, blayout=col_major, slayout=row_major, fractal=1024, pad=0>)
    return
  }
}

// CHECK: error: 'pto.tgemv.mx' op expects static matmul tile shapes lhs[M,K], rhs[K,N], and dst[M,N]
